WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23616
Various "template helpers" should be consolidated from isolated files in JavaScriptCore.
https://bugs.webkit.org/show_bug.cgi?id=23616
Summary
Various "template helpers" should be consolidated from isolated files in Java...
David Levin
Reported
2009-01-29 01:24:31 PST
Also, it turns out that IsPod doesn't account for wchar_t like IsInteger does, which is fixed in this change and compile asserts are added for IsPod. It is certainly possible to make IsPod depend on IsInteger, but in this change it'll just be consolidating (plus the wchar_t fix for IsPod).
Attachments
Patch.
(23.25 KB, patch)
2009-01-29 01:46 PST
,
David Levin
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2009-01-29 01:46:32 PST
Created
attachment 27142
[details]
Patch.
Alexey Proskuryakov
Comment 2
2009-01-29 03:04:27 PST
Comment on
attachment 27142
[details]
Patch. r=me IsPod needs a comment explaining that it is far from being accurate - for example, it doesn't accepts structs and enums. Also, it may be hard to find out what the APIs implemented by this file are - e.g. RemovePointer comes late after huge piles of implementation cruft and debug assertions. Maybe there should be a synopsis at the top.
David Levin
Comment 3
2009-01-29 03:19:17 PST
> IsPod needs a comment explaining that it is far from being accurate - for
example, it doesn't accepts structs and enums.
> Also, it may be hard to find out what the APIs implemented by this file are -
e.g. RemovePointer comes late after huge piles of implementation cruft and debug assertions. Maybe there should be a synopsis at the top. Both great suggestions. Is it ok to handle them in
bug 23618
since I'll be modifying this one file as the first change? (So I can be done with this "consolidation" patch.)
Alexey Proskuryakov
Comment 4
2009-01-30 00:35:22 PST
Committed revision 40399. I had to remove ByteArray moves in project file, because these didn't apply cleanly. Also, reworked ChangeLog a bit.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug