2009-01-30  David Levin  <levin@chromium.org>

Reviewed by Alexey Proskuryakov.

        Bug 23616: Various "template helpers" should be consolidated from isolated files in JavaScriptCore.
        <https://bugs.webkit.org/show_bug.cgi?id=23616>

        * wtf/TypeTraits.h: Moved RemovePointer, IsPod, IsInteger to this file.

        * wtf/OwnPtr.h: Use RemovePointer from TypeTraits.h.
        * wtf/RetainPtr.h:  Ditto.

        * wtf/HashTraits.h: Use IsInteger from TypeTraits.h.

        * wtf/VectorTraits.h: Use IsPod from TypeTraits.h.

        * GNUmakefile.am:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        Added TypeTraits.h.



Canonical link: https://commits.webkit.org/32582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40399 268f45cc-cd09-0410-ab3c-d52691b4dbfc